volexc/tests/ui/check_duplicate_union_variant.out
Error: duplicate variant `Bar` in union `Foo`
   ╭─[check_duplicate_union_variant.vol:3:5]
   │
 3 │     Bar(u32) = 1
   │     ─┬─  
   │      ╰─── first defined here
 4 │     Bar(u64) = 2
   │     ─┬─  
   │      ╰─── redefined here
───╯