volexc/tests/ui/check_duplicate_union_variant.vol
// Duplicate variant in union
union Foo {
    Bar(u32) = 1;
    Bar(u64) = 2;
}
